tests/success/0005_export.ec
theory T.
  op o : int -> int.
end T.
export T.

op o (x:int) : int = o(x).