tests/fail/0002_operator2.ec
op foo (x:int, l:int list) : int list = x :: <:'b=int> l.